<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_main" />

            <TextView
                android:id="@+id/text_search"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/home" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_music"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_music"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_music" />

            <TextView
                android:id="@+id/text_music"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/music" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_car"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_car" />

            <TextView
                android:id="@+id/text_car"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/car" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_setting" />

            <TextView
                android:id="@+id/text_setting"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/setting" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
