<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/image_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="title"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom"
            android:layout_below="@+id/rl_title" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_main" />

                <TextView
                    android:id="@+id/text_search"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/home" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_music"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_music" />

                <TextView
                    android:id="@+id/text_music"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/music" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_car"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_car"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_car" />

                <TextView
                    android:id="@+id/text_car"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/car" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_setting" />

                <TextView
                    android:id="@+id/text_setting"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/setting" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <!--左侧的菜单布局-->
    <RelativeLayout
        android:id="@+id/rl_menu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/text_menu"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/menu" />

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_menu"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:scrollbars="none" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
